@@ -46,11 +46,12 @@ class SD extends BackendAbstract {
 	}
 
 	function getImpl($args) {
-		$result = NULL;
-		switch ($this->getHostDriver($args)) {
+		$sd = new \OMV\System\Storage\StorageDeviceSD($args);
+		$sd->assertExists();
+		switch ($sd->getHostDriver()) {
 		case "arcmsr":
 			// Areca RAID controller
-			$result = new \OMV\System\Storage\StorageDeviceARCMSR($args);
+			return new \OMV\System\Storage\StorageDeviceARCMSR($args);
 			break;
 		case "hpsa":
 			// Logical drives from HP Smart Array RAID controllers
@@ -58,46 +59,13 @@ class SD extends BackendAbstract {
 			// identify such drives because these must be handled
 			// different in some cases (e.g. S.M.A.R.T.).
 			// @see https://linux.die.net/man/4/hpsa
-			$result = new \OMV\System\Storage\StorageDeviceHPSA($args);
-			break;
-		default:
-			$result = new \OMV\System\Storage\StorageDeviceSD($args);
+			return new \OMV\System\Storage\StorageDeviceHPSA($args);
 			break;
 		}
-		return $result;
+		return $sd;
 	}
 
 	function baseDeviceFile($deviceFile) {
 		return preg_replace("/(\d+)$/", "", $deviceFile);
-	}
-
-	private function getHostDriver($deviceFile) {
-		$sd = new \OMV\System\Storage\StorageDevice($deviceFile);
-		$sd->assertExists();
-		// Try to get the driver via 'driver'.
-		$hostPath = sprintf("/sys/block/%s/device/../..",
-			$sd->getDeviceName(TRUE));
-		$driverPath = realpath(sprintf("%s/../driver", $hostPath));
-		if (file_exists($driverPath)) {
-			return basename($driverPath);
-		}
-		// Try to get the driver via 'proc_name'.
-		// 'proc_name' is the "name of proc directory" of a driver, if
-		// the driver maintained one.
-		$realDevicePath = realpath(sprintf("/sys/block/%s",
-			$sd->getDeviceName(TRUE)));
-		$hostName = "";
-		foreach (explode("/", $realDevicePath) as $partk => $partv) {
-			if (1 == preg_match("/^host\d+$/", $partv)) {
-				$hostName = $partv;
-				break;
-			}
-		}
-		$procNamePath = sprintf("/sys/class/scsi_host/%s/proc_name",
-			$hostName);
-		if (file_exists($procNamePath)) {
-			return trim(file_get_contents($procNamePath));
-		}
-		return "";
 	}
 }
