@@ -13,6 +13,7 @@ openmediavault (5.5.24-1) stable; urgency=low
   * Fix a bug in omv-env when trying to set a string separated
     by blanks.
   * Issue #944: Hardening storage backend to prevent errors in LXC.
+  * Issue #959: Improve SMART support for HPSA HBA.
 
  -- Volker Theile <volker.theile@openmediavault.org>  Tue, 19 Jan 2021 21:00:39 +0100
 
